--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
     <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
     <img src="./assets/images/movies.png"/>
 
-    <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-    <img src="./assets/images/birthday.png" />
+    <h3>This is where you need to go:</h3>
+    <a href="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656">Google
+        map link</a>
     <hr />
+    <br/>
     <a href="./public/about.html">About me</a>
     <a href="./public/contact.html">Contact me</a>
 </body>
